[package]
name = "tdctld"
description = "A cross-platform utility that is able to get, set, and sync system time, and is also an extremely accurate time-synchronization daemon"
repository = "https://github.com/tropicbliss/tdctld"
version = "1.0.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.8", features = ["derive"] }
lunartick = { path = "../lunartick" }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }