[package]
name = "lunartick"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.19"
thiserror = "1.0.31"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.38.0", features = ["Win32_Foundation", "Win32_System_SystemInformation"] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.126"
